ChangeLog for the Astro project.

20120117:
	* start the project

--
$Id$