@@ -18,7 +18,7 @@ AC_PROG_CC
 AC_PROG_LIBTOOL
 AC_CHECK_TOOL(FLEX, flex)
 AC_CHECK_TOOL(BISON, bison)
-AC_CHECK_TOOLS(SLICE2CPP, slice2cpp)
+AC_PATH_TOOL(SLICE2CPP, slice2cpp)
 
 # Checks for header files
 AC_HEADER_STDC
