@@ -7,10 +7,11 @@
 if ENABLE_QSI
 
 pkglib_LTLIBRARIES = qsi.la 
-noinst_HEADERS = QsiLocator.h QsiCamera.h QsiCcd.h QsiCooler.h QsiFilterWheel.h
+noinst_HEADERS = QsiLocator.h QsiCamera.h QsiCcd.h QsiCooler.h \
+	QsiFilterWheel.h QsiGuiderPort.h
 
 SRCFILES = QsiLocator.cpp QsiCamera.cpp QsiCcd.cpp QsiCooler.cpp \
-	QsiFilterWheel.cpp
+	QsiFilterWheel.cpp QsiGuiderPort.cpp
 
 if ENABLE_UNITTESTS
 
